<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_login"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/username_login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_pass"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:id="@+id/username_pass"/>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button
    android:text="@string/login_button"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/loginButtonConfirmation"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="60dp"/>

    <Button

        android:id="@+id/cancelButtonConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cancel_button" />
</TableRow>
</LinearLayout>