<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_login"
        android:ems="10"
        android:id="@+id/registoUsername"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_pass"
        android:ems="10"
        android:id="@+id/registoPass"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/registoUsername" />

    <EditText
        android:id="@+id/registoConfirmaPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/confirma_pass_registo"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/registoPass" />

    <Button
        android:text="@string/confirmar_registo"
        android:layout_width="104dp"
        android:layout_height="46dp"
        android:id="@+id/registoButtonConfirmation"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.498"
        app:layout_constraintTop_toBottomOf="@+id/registoConfirmaPass" />

    <Button
        android:id="@+id/resetRegistoButton"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:text="@string/reset_button"
        app:layout_constraintLeft_toRightOf="@+id/registoButtonConfirmation"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintTop_toBottomOf="@+id/registoConfirmaPass" />



</android.support.constraint.ConstraintLayout>
